android-emulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: android-emulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: android-emulator
  template:
    metadata:
      labels:
        app: android-emulator
    spec:
      containers:
        - name: android-emulator
          image: image-registry.openshift-image-registry.svc:5000/kallepallirupesh-dev/android-emulator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5554
            - containerPort: 5555
          command: ["/opt/start-emulator.sh"]
          volumeMounts:
            # writable Android home for adb keys
            - name: android-home
              mountPath: /data/android
            # mount the AVD folder
            - name: android-avd
              mountPath: /data/avd/test_avd_x86.avd
              subPath: test_avd_x86.avd
            # mount the .ini from ConfigMap
            - name: avd-config
              mountPath: /data/avd/test_avd.ini
              subPath: test_avd.ini
      volumes:
        - name: android-home
          emptyDir: {}
        - name: android-avd
          persistentVolumeClaim:
            claimName: android-avd-pvc   # or emptyDir if temporary
        - name: avd-config
          configMap:
            name: android-avd-config
