nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-only
  labels:
    app: nginx-only
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-only
  template:
    metadata:
      labels:
        app: nginx-only
    spec:
      containers:
        - name: nginx
          image: registry.access.redhat.com/ubi9/nginx-120
          args: [ "nginx", "-g", "daemon off;" ]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 4
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: conf
          configMap:
            name: nginx-only-conf
            items:
              - key: nginx.conf
                path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-only-svc
  labels:
    app: nginx-only
spec:
  selector:
    app: nginx-only
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-only
  labels:
    app: nginx-only
spec:
  to:
    kind: Service
    name: nginx-only-svc
  port:
    targetPort: http
  tls:
    termination: edge
