prometheus-deployment.yaml
###########################################
# Prometheus Deployment
###########################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: kallepallirupesh-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
            - name: prometheus-data
              mountPath: /prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
        - name: prometheus-data
          emptyDir: {}
---
###########################################
# Prometheus Service
###########################################
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kallepallirupesh-dev
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
---
###########################################
# Prometheus Route (OpenShift)
###########################################
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
  namespace: kallepallirupesh-dev
spec:
  to:
    kind: Service
    name: prometheus
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
