teamcity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-postgres
  template:
    metadata:
      labels:
        app: teamcity-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: teamcity-db
---
apiVersion: v1
kind: Service
metadata:
  name: teamcity-postgres
spec:
  selector:
    app: teamcity-postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity
  template:
    metadata:
      labels:
        app: teamcity
    spec:
      containers:
        - name: teamcity
          image: image-registry.openshift-image-registry.svc:5000/kallepallirupesh-dev/teamcity:latest
          ports:
            - containerPort: 8111
          volumeMounts:
            - name: teamcity-data
              mountPath: /data/teamcity_server/datadir
          resources:
            limits:
              cpu: '1'
              memory: 3Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
      volumes:
        - name: teamcity-data
          persistentVolumeClaim:
            claimName: teamcity-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity-agent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teamcity-agent
  template:
    metadata:
      labels:
        app: teamcity-agent
    spec:
      containers:
        - name: teamcity-agent
          image: image-registry.openshift-image-registry.svc:5000/kallepallirupesh-dev/teamcity-agent:latest

          volumeMounts:
            - name: agent-data
              mountPath: /data/teamcity_agent

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true

      volumes:
        - name: agent-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: teamcity
spec:
  selector:
    app: teamcity
  ports:
    - protocol: TCP
      port: 8111
      targetPort: 8111
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: teamcity
spec:
  to:
    kind: Service
    name: teamcity
  port:
    targetPort: 8111
  tls:
    termination: edge
